@@ -1,24 +1,23 @@
 package com.imb2025.smedico.controller;
+
 import com.imb2025.smedico.dto.ApiResponseSuccessDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
 import com.imb2025.smedico.dto.EstadoTurnoRequestDto;
 import com.imb2025.smedico.entity.EstadoTurno;
 import com.imb2025.smedico.service.IEstadoTurnoService;
 
 import jakarta.validation.Valid;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("/estado-turno") //Los endpoints definidos comenzarán con "/estado-turno"
 public class EstadoTurnoController {
 
-    private final IEstadoTurnoService estadoTurnoService; // Instanciamos EstadoTurnoS, para la lógica
+    private final IEstadoTurnoService estadoTurnoService;
 
     public EstadoTurnoController(IEstadoTurnoService estadoTurnoService) {
         this.estadoTurnoService = estadoTurnoService;
@@ -32,7 +31,7 @@ public class EstadoTurnoController {
         // Convertimos la lista de entidades a lista de DTOs de respuesta
         List<EstadoTurnoRequestDto> dtos = estados.stream()
                 .map(e -> new EstadoTurnoRequestDto(e.getNombre()))
-                .toList();
+                .collect(Collectors.toList());
 
         // Envolvemos todo en el DTO estándar de éxito
         ApiResponseSuccessDto<List<EstadoTurnoRequestDto>> response =
@@ -44,34 +43,29 @@ public class EstadoTurnoController {
     // GET de EstadoTurnoE {id} (Obtener un registro por ID)
     @GetMapping("/{id}")
     public ResponseEntity<ApiResponseSuccessDto<EstadoTurnoRequestDto>> getById(@PathVariable Long id) {
-        // Buscamos la entidad, lanzará ResourceNotFoundException si no existe
+        // Buscamos la entidad, el servicio lanzará ResourceNotFoundException si no existe
         EstadoTurno estadoTurno = estadoTurnoService.findById(id);
 
         // Convertimos la entidad a DTO
-        EstadoTurnoRequestDto dto = new EstadoTurnoRequestDto();
-        
-        dto.setNombre(estadoTurno.getNombre());
-        // No incluimos la colección 'turnos' para evitar LazyInitializationException
+        EstadoTurnoRequestDto dto = new EstadoTurnoRequestDto(estadoTurno.getNombre());
+
         // Armamos la respuesta genérica
         ApiResponseSuccessDto<EstadoTurnoRequestDto> response = new ApiResponseSuccessDto<>(
-            true,       // success
-            "EstadoTurno encontrado",  // mensaje
-            dto         // data
+                true,
+                "EstadoTurno encontrado",
+                dto
         );
 
         return ResponseEntity.ok(response);
     }
-
 
     // POST de EstadoTurnoE (Crear un nuevo registro)
     @PostMapping
     public ResponseEntity<ApiResponseSuccessDto<EstadoTurnoRequestDto>> create(
             @Valid @RequestBody EstadoTurnoRequestDto dto) {
 
-        // conversión DTO a entidad
+        // conversión DTO a entidad y persistencia
         EstadoTurno entidad = estadoTurnoService.fromDto(dto);
-
-        // persistencia
         EstadoTurno creado = estadoTurnoService.create(entidad);
 
         // DTO de respuesta
@@ -84,18 +78,17 @@ public class EstadoTurnoController {
         return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
+    // PUT de EstadoTurnoE (Actualizar un nuevo registro)
     @PutMapping("/{id}")
     public ResponseEntity<ApiResponseSuccessDto<EstadoTurnoRequestDto>> update(
             @PathVariable Long id,
-            @RequestBody EstadoTurnoRequestDto dto) {
+            @Valid @RequestBody EstadoTurnoRequestDto dto) {
 
         EstadoTurno estadoTurno = estadoTurnoService.fromDto(dto);
         EstadoTurno actualizado = estadoTurnoService.update(id, estadoTurno);
 
         // Reutilizamos el mismo DTO para la respuesta
-        EstadoTurnoRequestDto responseDto = new EstadoTurnoRequestDto(
-                actualizado.getNombre()
-        );
+        EstadoTurnoRequestDto responseDto = new EstadoTurnoRequestDto(actualizado.getNombre());
 
         ApiResponseSuccessDto<EstadoTurnoRequestDto> response =
                 new ApiResponseSuccessDto<>(true, "EstadoTurno actualizado correctamente", responseDto);
@@ -103,31 +96,11 @@ public class EstadoTurnoController {
         return ResponseEntity.ok(response);
     }
 
-
-
-    
+    // DELETE de EstadoTurnoE (Eliminar un registro)
     @DeleteMapping("/{id}")
-    public ResponseEntity<ApiResponseSuccessDto<Void>> delete(@PathVariable Long id) {
-        if (!estadoTurnoService.existsById(id)) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new ApiResponseSuccessDto<>(
-                            false,
-                            "Error: No se encontró el EstadoTurno con ID: " + id,
-                            null
-                    ));
-        }
-
+    public ResponseEntity<Void> delete(@PathVariable Long id) {
+        // La lógica de verificación de existencia y el manejo de la excepción se hacen en la capa de servicio
         estadoTurnoService.deleteById(id);
-
-        ApiResponseSuccessDto<Void> response = new ApiResponseSuccessDto<>(
-                true,
-                "EstadoTurno eliminado correctamente",
-                null
-        );
-
-        return ResponseEntity.ok(response);
+        return ResponseEntity.ok().build();
     }
-
-
 }
-
